debug.log
Internal Server Error: /account/signup/
Traceback (most recent call last):
  File "C:\Users\ize_c\OneDrive\Desktop\Quickfire_bulletin1\venv\Lib\site-packages\django\core\handlers\exception.py", line 47, in inner
    response = get_response(request)
               ^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\ize_c\OneDrive\Desktop\Quickfire_bulletin1\venv\Lib\site-packages\django\core\handlers\base.py", line 181, in _get_response
    response = wrapped_callback(request, *callback_args, **callback_kwargs)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\ize_c\OneDrive\Desktop\Quickfire_bulletin1\qfb_main\views.py", line 96, in account_signup
    return render(request, 'account/signup.html', {'form': form})
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\ize_c\OneDrive\Desktop\Quickfire_bulletin1\venv\Lib\site-packages\django\shortcuts.py", line 19, in render
    content = loader.render_to_string(template_name, context, request, using=using)
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\ize_c\OneDrive\Desktop\Quickfire_bulletin1\venv\Lib\site-packages\django\template\loader.py", line 61, in render_to_string
    template = get_template(template_name, using=using)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\ize_c\OneDrive\Desktop\Quickfire_bulletin1\venv\Lib\site-packages\django\template\loader.py", line 15, in get_template
    return engine.get_template(template_name)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\ize_c\OneDrive\Desktop\Quickfire_bulletin1\venv\Lib\site-packages\django\template\backends\django.py", line 34, in get_template
    return Template(self.engine.get_template(template_name), self)
                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\ize_c\OneDrive\Desktop\Quickfire_bulletin1\venv\Lib\site-packages\django\template\engine.py", line 143, in get_template
    template, origin = self.find_template(template_name)
                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\ize_c\OneDrive\Desktop\Quickfire_bulletin1\venv\Lib\site-packages\django\template\engine.py", line 125, in find_template
    template = loader.get_template(name, skip=skip)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\ize_c\OneDrive\Desktop\Quickfire_bulletin1\venv\Lib\site-packages\django\template\loaders\cached.py", line 58, in get_template
    template = super().get_template(template_name, skip)
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\ize_c\OneDrive\Desktop\Quickfire_bulletin1\venv\Lib\site-packages\django\template\loaders\base.py", line 29, in get_template
    return Template(
           ^^^^^^^^^
  File "C:\Users\ize_c\OneDrive\Desktop\Quickfire_bulletin1\venv\Lib\site-packages\django\template\base.py", line 155, in __init__
    self.nodelist = self.compile_nodelist()
                    ^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\ize_c\OneDrive\Desktop\Quickfire_bulletin1\venv\Lib\site-packages\django\template\base.py", line 193, in compile_nodelist
    return parser.parse()
           ^^^^^^^^^^^^^^
  File "C:\Users\ize_c\OneDrive\Desktop\Quickfire_bulletin1\venv\Lib\site-packages\django\template\base.py", line 478, in parse
    raise self.error(token, e)
  File "C:\Users\ize_c\OneDrive\Desktop\Quickfire_bulletin1\venv\Lib\site-packages\django\template\base.py", line 476, in parse
    compiled_result = compile_func(self, token)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\ize_c\OneDrive\Desktop\Quickfire_bulletin1\venv\Lib\site-packages\django\template\loader_tags.py", line 278, in do_extends
    nodelist = parser.parse()
               ^^^^^^^^^^^^^^
  File "C:\Users\ize_c\OneDrive\Desktop\Quickfire_bulletin1\venv\Lib\site-packages\django\template\base.py", line 478, in parse
    raise self.error(token, e)
  File "C:\Users\ize_c\OneDrive\Desktop\Quickfire_bulletin1\venv\Lib\site-packages\django\template\base.py", line 476, in parse
    compiled_result = compile_func(self, token)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\ize_c\OneDrive\Desktop\Quickfire_bulletin1\venv\Lib\site-packages\django\template\loader_tags.py", line 216, in do_block
    nodelist = parser.parse(('endblock',))
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\ize_c\OneDrive\Desktop\Quickfire_bulletin1\venv\Lib\site-packages\django\template\base.py", line 478, in parse
    raise self.error(token, e)
  File "C:\Users\ize_c\OneDrive\Desktop\Quickfire_bulletin1\venv\Lib\site-packages\django\template\base.py", line 476, in parse
    compiled_result = compile_func(self, token)
                      ^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\ize_c\OneDrive\Desktop\Quickfire_bulletin1\venv\Lib\site-packages\django\templatetags\i18n.py", line 536, in do_block_translate
    raise TemplateSyntaxError("%r doesn't allow other block tags (seen %r) inside it" % (bits[0], token.contents))
django.template.exceptions.TemplateSyntaxError: 'blocktrans' doesn't allow other block tags (seen "url 'account_login'") inside it
"GET /account/signup/ HTTP/1.1" 500 145
